reconstruct web server with static html file

--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Linux Web Server</title>
 </head>
 <body>
-
+    <h1>Hello</h1>
+    <p>kugou</p>
 </body>
 </html>
